# golobulus-rs

./: .gitignore  ReadMe.md
golob_lib/src/: numpy_helper.py
golob_plugin/: Justfile
golob_plugin/pyo3_configs/: Golobulus.aex.manifest  aarch64-apple-darwin.cfg  x86_64-apple-darwin.cfg  x86_64-pc-windows-msvc.cfg
golob_python/: pyproject.toml
golob_python/src/golob_python/: context.py
golobulus_examples/: grayscale.py
golobulus_examples/transformers/: depth_anything.py
sdk/Premiere Pro 22.0 C++ SDK/Examples/Projects/SDK_File_Import/: SDK_File_Import.vcxproj
