[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "golob_python"
version = "1.0.0"
description = "The Python type bindings for Golobulus After Effects Python plugins"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<2",
]

[tool.setuptools.packages.find]
where = ["src"]